Resolved deprecation.